--- a/parking-monster/Views/Shared/_Layout.cshtml
+++ b/parking-monster/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("James Manglinong - Test", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("James Manglinong - Test - Frank The Tank", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
